--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,29 +1,23 @@
 {
+  "extends": "@kb-labs/devkit/tsconfig/base.json",
   "compilerOptions": {
-    "target": "ES2022",
-    "lib": ["ES2022", "DOM"],
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-
-    "strict": true,
-    "noImplicitAny": true,
-    "noUncheckedIndexedAccess": true,
-    "skipLibCheck": true,
-
-    "declaration": false,
+    "declaration": true,
     "declarationMap": false,
     "sourceMap": true,
-    "inlineSources": true,
-
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-
-    "baseUrl": "."
-  },
-  "exclude": [
-    "src/**/__tests__/**",
-    "src/**/*.spec.ts",
-    "src/**/*.test.ts"
-  ]
+    "baseUrl": ".",
+    "paths": {
+      "@kb-labs/ai-review-core": ["packages/core/dist"],
+      "@kb-labs/ai-review-core/*": ["packages/core/dist/*"],
+      "@kb-labs/ai-review-cli": ["packages/cli/dist"],
+      "@kb-labs/ai-review-cli/*": ["packages/cli/dist/*"],
+      "@kb-labs/ai-review-analytics": ["packages/analytics/dist"],
+      "@kb-labs/ai-review-analytics/*": ["packages/analytics/dist/*"],
+      "@kb-labs/ai-review-provider-types": ["packages/providers/types/dist"],
+      "@kb-labs/ai-review-provider-types/*": ["packages/providers/types/dist/*"],
+      "@kb-labs/ai-review-provider-mock": ["packages/providers/mock/dist"],
+      "@kb-labs/ai-review-provider-mock/*": ["packages/providers/mock/dist/*"],
+      "@kb-labs/ai-review-provider-local": ["packages/providers/local/dist"],
+      "@kb-labs/ai-review-provider-local/*": ["packages/providers/local/dist/*"]
+    }
+  }
 }
