--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sentinel/demo",
+  "name": "@kb-labs/ai-review-demo",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -12,7 +12,7 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@sentinel/core": "workspace:*"
+    "@kb-labs/ai-review-core": "workspace:*"
   },
   "devDependencies": {
     "typescript": "^5.6.3",
