--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sentinel-ai",
+  "name": "@kb-labs/ai-review",
   "version": "0.1.0",
   "private": true,
   "description": "AI-powered code review and analysis tool",
@@ -18,27 +18,37 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kirill-baranov/sentinel-ai.git"
+    "url": "https://github.com/kirill-baranov/kb-labs-ai-review.git"
   },
   "bugs": {
-    "url": "https://github.com/kirill-baranov/sentinel-ai/issues"
+    "url": "https://github.com/kirill-baranov/kb-labs-ai-review/issues"
   },
-  "homepage": "https://github.com/kirill-baranov/sentinel-ai#readme",
+  "homepage": "https://github.com/kirill-baranov/kb-labs-ai-review#readme",
   "workspaces": [
     "apps/*",
     "packages/*"
   ],
   "scripts": {
+    "// ——— devkit": "────────────────────────────────────────",
+    "devkit:sync": "node scripts/devkit-sync.mjs",
+    "devkit:sync:ci": "node scripts/devkit-sync.mjs --ci-only",
+    "devkit:check": "node scripts/devkit-sync.mjs --check",
+    "devkit:force": "node scripts/devkit-sync.mjs --force",
+    "devkit:help": "node scripts/devkit-sync.mjs --help",
+    "postinstall": "pnpm -s devkit:sync || true",
     "// ——— core": "────────────────────────────────────────",
+    "clean": "rimraf dist",
     "build": "pnpm -r run build",
     "build:clean": "pnpm -r run clean && pnpm -r run build",
-    "dev": "pnpm -r --parallel --filter @sentinel/core --filter @sentinel/analytics --filter @sentinel/provider-* --filter @sentinel/cli run dev",
+    "dev": "pnpm -r --parallel --filter @kb-labs/ai-review-core --filter @kb-labs/ai-review-analytics --filter @kb-labs/ai-review-provider-* --filter @kb-labs/ai-review-cli run dev",
 
     "// ——— quality": "────────────────────────────────────────",
     "lint": "pnpm -r run lint",
     "lint:fix": "pnpm -r run lint:fix",
+    "format": "prettier --write .",
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "type-check": "tsc -b tsconfig.tools.json",
 
     "// ——— ci/qa": "────────────────────────────────────────",
@@ -46,34 +56,33 @@
     "ci": "pnpm clean && pnpm build && pnpm check",
 
     "// ——— cleanup": "────────────────────────────────────────",
-    "clean": "pnpm -r run clean",
-    "clean:all": "rimraf node_modules packages/*/node_modules apps/*/node_modules dist .sentinel",
-    "clean:analytics": "rimraf .sentinel/analytics dist/analytics dist/analytics-export",
+    "clean:all": "rimraf node_modules packages/*/node_modules apps/*/node_modules dist .ai-review",
+    "clean:analytics": "rimraf .ai-review/analytics dist/analytics dist/analytics-export",
 
     "// ——— context": "────────────────────────────────────────",
-    "sentinel:context:dev": "pnpm -F @sentinel/cli exec tsx src/index.ts build-context",
-    "sentinel:context":     "pnpm -r build && pnpm -F @sentinel/cli exec node dist/index.js build-context",
+    "ai-review:context:dev": "pnpm -F @kb-labs/ai-review-cli exec tsx src/index.ts build-context",
+    "ai-review:context":     "pnpm -r build && pnpm -F @kb-labs/ai-review-cli exec node dist/index.js build-context",
 
     "// ——— review": "────────────────────────────────────────",
-    "sentinel:review:dev":        "pnpm -F @sentinel/cli exec tsx src/index.ts review --diff fixtures/changes.diff",
-    "sentinel:review:nofail:dev": "pnpm -F @sentinel/cli exec tsx src/index.ts review --diff fixtures/changes.diff --fail-on none",
-    "sentinel:review":            "pnpm -r build && pnpm -F @sentinel/cli exec node dist/index.js review --diff fixtures/changes.diff",
+    "ai-review:review:dev":        "pnpm -F @kb-labs/ai-review-cli exec tsx src/index.ts review --diff fixtures/changes.diff",
+    "ai-review:review:nofail:dev": "pnpm -F @kb-labs/ai-review-cli exec tsx src/index.ts review --diff fixtures/changes.diff --fail-on none",
+    "ai-review:review":            "pnpm -r build && pnpm -F @kb-labs/ai-review-cli exec node dist/index.js review --diff fixtures/changes.diff",
 
     "// ——— render": "────────────────────────────────────────",
-    "sentinel:render-md:dev":   "pnpm -F @sentinel/cli exec tsx src/index.ts render-md --in .sentinel/reviews/review.json --out .sentinel/reviews/review.human.md",
-    "sentinel:render-md":       "pnpm -r build && SENTINEL_PROFILE=frontend pnpm -F @sentinel/cli exec node dist/index.js render-md",
-    "sentinel:render-html:dev": "pnpm -F @sentinel/cli exec tsx src/index.ts render-html --in .sentinel/reviews/review.json --out .sentinel/reviews/review.html",
-    "sentinel:render-html":     "pnpm -r build && SENTINEL_PROFILE=frontend pnpm -F @sentinel/cli exec node dist/index.js render-html",
+    "ai-review:render-md:dev":   "pnpm -F @kb-labs/ai-review-cli exec tsx src/index.ts render-md --in .ai-review/reviews/review.json --out .ai-review/reviews/review.human.md",
+    "ai-review:render-md":       "pnpm -r build && AI_REVIEW_PROFILE=frontend pnpm -F @kb-labs/ai-review-cli exec node dist/index.js render-md",
+    "ai-review:render-html:dev": "pnpm -F @kb-labs/ai-review-cli exec tsx src/index.ts render-html --in .ai-review/reviews/review.json --out .ai-review/reviews/review.html",
+    "ai-review:render-html":     "pnpm -r build && AI_REVIEW_PROFILE=frontend pnpm -F @kb-labs/ai-review-cli exec node dist/index.js render-html",
 
     "// ——— analytics": "────────────────────────────────────────",
-    "sentinel:analytics:ingest": "pnpm -F @sentinel/cli exec node dist/index.js analytics:ingest",
-    "sentinel:analytics:print":  "pnpm -F @sentinel/cli exec node dist/index.js analytics:print",
-    "sentinel:analytics:top":    "pnpm -F @sentinel/cli exec node dist/index.js analytics:top",
-    "sentinel:analytics:trend":  "pnpm -F @sentinel/cli exec node dist/index.js analytics:trend",
-    "sentinel:analytics:export": "pnpm -F @sentinel/cli exec node dist/index.js analytics:export",
+    "ai-review:analytics:ingest": "pnpm -F @kb-labs/ai-review-cli exec node dist/index.js analytics:ingest",
+    "ai-review:analytics:print":  "pnpm -F @kb-labs/ai-review-cli exec node dist/index.js analytics:print",
+    "ai-review:analytics:top":    "pnpm -F @kb-labs/ai-review-cli exec node dist/index.js analytics:top",
+    "ai-review:analytics:trend":  "pnpm -F @kb-labs/ai-review-cli exec node dist/index.js analytics:trend",
+    "ai-review:analytics:export": "pnpm -F @kb-labs/ai-review-cli exec node dist/index.js analytics:export",
 
     "// ——— demos": "────────────────────────────────────────",
-    "demo": "pnpm -F @sentinel/demo dev"
+    "demo": "pnpm -F @kb-labs/ai-review-demo dev"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,json,md,yml,yaml}": [
@@ -83,34 +92,28 @@
       "eslint --fix"
     ]
   },
+  "dependencies": {
+    "@kb-labs/devkit": "github:KirillBaranov/kb-labs-devkit#main",
+    "zod": "^4.1.5"
+  },
   "devDependencies": {
-    "@types/node": "^20.14.10",
-    "@types/picomatch": "^4",
-    "@typescript-eslint/eslint-plugin": "^8.8.0",
-    "@typescript-eslint/parser": "^8.8.0",
-    "@vitest/coverage-v8": "2.1.9",
-    "better-sqlite3": "^12.2.0",
-    "colorette": "^2.0.20",
-    "eslint": "^9.16.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsonc": "^2.15.1",
-    "eslint-plugin-markdown": "^3.0.1",
-    "eslint-plugin-n": "^17.10.3",
-    "eslint-plugin-unused-imports": "^4.0.0",
-    "prettier": "^3.3.3",
-    "typescript": "^5.6.3",
     "@actions/core": "^1",
     "@actions/github": "^6",
+    "@types/node": "^24.3.3",
+    "@types/picomatch": "^4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "better-sqlite3": "^12.2.0",
+    "colorette": "^2.0.20",
+    "prettier": "^3",
+    "rimraf": "^6",
+    "tsup": "^8.5.0",
+    "typescript": "^5.6.3",
     "vite": "^5.4.10",
-    "vitest": "^2.1.4"
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=18.18.0",
     "pnpm": ">=9.0.0"
   },
-  "packageManager": "pnpm@9.11.0",
-  "dependencies": {
-    "zod": "^4.1.5"
-  }
+  "packageManager": "pnpm@9.11.0"
 }
