--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@sentinel/cli",
+  "name": "@kb-labs/ai-review-cli",
   "version": "0.1.0",
   "type": "module",
-  "bin": { "sentinel": "./dist/index.js" },
+  "bin": { "ai-review": "./dist/index.js" },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
@@ -19,11 +19,11 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@sentinel/core": "workspace:*",
-    "@sentinel/provider-types": "workspace:*",
-    "@sentinel/provider-mock": "workspace:*",
-    "@sentinel/provider-local": "workspace:*",
-    "@sentinel/analytics": "workspace:*",
+    "@kb-labs/ai-review-core": "workspace:*",
+    "@kb-labs/ai-review-provider-types": "workspace:*",
+    "@kb-labs/ai-review-provider-mock": "workspace:*",
+    "@kb-labs/ai-review-provider-local": "workspace:*",
+    "@kb-labs/ai-review-analytics": "workspace:*",
     "commander": "^12.1.0",
     "colorette": "^2.0.20"
   },
