--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sentinel/core",
+  "name": "@kb-labs/ai-review-core",
   "version": "0.1.0",
   "type": "module",
   "main": "./dist/index.js",
