--- a/packages/providers/local/package.json
+++ b/packages/providers/local/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sentinel/provider-local",
+  "name": "@kb-labs/ai-review-provider-local",
   "version": "0.1.0",
   "type": "module",
   "main": "./dist/index.js",
@@ -17,8 +17,8 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@sentinel/core": "workspace:*",
-    "@sentinel/provider-types": "workspace:*"
+    "@kb-labs/ai-review-core": "workspace:*",
+    "@kb-labs/ai-review-provider-types": "workspace:*"
   },
   "devDependencies": {
     "rimraf": "^6.0.1",
