--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,14 @@
   "references": [
     { "path": "packages/core" },
     { "path": "packages/cli" },
+    { "path": "packages/analytics" },
     { "path": "packages/providers/types" },
     { "path": "packages/providers/mock" },
     { "path": "packages/providers/local" },
     // { "path": "packages/providers/openai" },
     // { "path": "packages/providers/claude" },
     { "path": "apps/demo" }
-  ]
+  ],
+  "extends": "./tsconfig.base.json",
+  "compilerOptions": { "composite": true, "noEmit": true }
 }
