feat(demo): add eslint configuration and dependencies
- Add eslint and related dependencies to apps/demo package.json
- Create eslint.config.js using @kb-labs/devkit as base configuration
- Ensure consistent linting standards across the demo application
- Improve code quality and maintainability for the AI review demo

--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -15,6 +15,10 @@
     "@kb-labs/ai-review-core": "link:../../packages/core"
   },
   "devDependencies": {
+    "@kb-labs/devkit": "link:../../../kb-labs-devkit",
+    "@typescript-eslint/eslint-plugin": "^8",
+    "@typescript-eslint/parser": "^8",
+    "eslint": "^9",
     "typescript": "^5.6.3",
     "vite": "^5.4.10",
     "vitest": "^2.1.4"
