feat(cli): migrate CLI from commander to manifest-based architecture
Replace commander-based CLI implementation with manifest-driven plugin system for @kb-labs/cli integration.

- Remove legacy commander setup from index.ts
- Add cli.manifest.ts with command definitions for kb-labs-cli
- Create local types.ts for CommandModule and CommandManifest types
- Update package.json with kb.commandsManifest entry

This enables seamless integration with the main kb CLI and follows the plugin discovery pattern.

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -35,6 +35,10 @@
     "@kb-labs/ai-review-provider-mock": "workspace:*",
     "@kb-labs/ai-review-provider-local": "workspace:*",
     "@kb-labs/ai-review-analytics": "link:../analytics",
+    "@kb-labs/core-sys": "link:../../../kb-labs-core/packages/sys",
+    "@kb-labs/shared-review-types": "link:../../../kb-labs-shared/packages/review-types",
+    "@kb-labs/cli-core": "link:../../../kb-labs-cli/packages/core",
+    "@kb-labs/cli-commands": "link:../../../kb-labs-cli/packages/commands",
     "commander": "^12.1.0",
     "colorette": "^2.0.20"
   },
