chore(deps): update dependencies and tsconfig paths
Update package dependencies and TypeScript configuration.

- Add @kb-labs/shared-review-types to provider dependencies
- Add path mapping for shared-review-types in tsconfig.base.json
- Update exports and types in core and providers packages
- Fix import paths and type references
- Update pnpm-lock.yaml with new dependencies

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,6 +25,9 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@kb-labs/shared-diff": "link:../../../kb-labs-shared/packages/diff",
+    "@kb-labs/shared-review-types": "link:../../../kb-labs-shared/packages/review-types",
+    "@kb-labs/core-sys": "link:../../../kb-labs-core/packages/sys",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "picomatch": "^4.0.2",
