--- a/packages/providers/local/package.json
+++ b/packages/providers/local/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "@kb-labs/ai-review-core": "workspace:*",
-    "@kb-labs/ai-review-provider-types": "workspace:*"
+    "@kb-labs/ai-review-provider-types": "workspace:*",
+    "@kb-labs/shared-review-types": "link:../../../kb-labs-shared/packages/review-types"
   },
   "devDependencies": {
     "rimraf": "^6.0.1",
