feat: replace legacy analytics with analytics SDK
- Remove @kb-labs/ai-review-analytics dependency
- Add @kb-labs/analytics-sdk-node dependency
- Create analytics events constants module for ai-review-cli commands

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -30,6 +30,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@kb-labs/analytics-sdk-node": "link:../../../kb-labs-analytics/packages/analytics-sdk-node",
     "@kb-labs/ai-review-core": "link:../core",
     "@kb-labs/ai-review-provider-types": "workspace:*",
     "@kb-labs/ai-review-provider-mock": "workspace:*",
