--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "homepage": "https://github.com/kirill-baranov/kb-labs-ai-review#readme",
   "workspaces": [
     "apps/*",
-    "packages/*"
+    "packages/*",
+    "packages/providers/*",
+    "packages/analytics/*"
   ],
   "scripts": {
     "// ——— devkit": "────────────────────────────────────────",
