--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@kb-labs/ai-review-analytics",
   "version": "0.1.0",
-  "private": false,
+  "description": "KB Labs AI Review - analytics module for tracking findings and runs",
   "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.js",
@@ -17,11 +17,25 @@
     "LICENSE"
   ],
   "sideEffects": false,
+  "author": {
+    "name": "Kirill Baranov",
+    "url": "https://github.com/kirill-baranov"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kirill-baranov/kb-labs-ai-review.git",
+    "directory": "packages/analytics"
+  },
   "scripts": {
     "clean": "rimraf dist",
     "build": "tsup --config tsup.config.ts",
     "dev": "tsup --config tsup.config.ts --watch",
     "type-check": "tsc --noEmit",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "test": "vitest run -c ../../vitest.config.ts",
+    "test:watch": "vitest -c ../../vitest.config.ts",
     "analytics:ingest": "node dist/index.js analytics:ingest",
     "analytics:print": "node dist/index.js analytics:print",
     "analytics:top": "node dist/index.js analytics:top",
@@ -32,8 +46,11 @@
     "@kb-labs/ai-review-core": "link:../core"
   },
   "devDependencies": {
-    "rimraf": "^6.0.1",
-    "tsup": "^8.5.0",
-    "typescript": "^5.6.3"
+    "@kb-labs/devkit": "link:../../../kb-labs-devkit",
+    "@types/node": "^24.7.0",
+    "rimraf": "^6",
+    "tsup": "^8",
+    "typescript": "^5",
+    "vitest": "^3"
   }
 }
