--- a/packages/providers/types/package.json
+++ b/packages/providers/types/package.json
@@ -19,9 +19,11 @@
     "@kb-labs/shared-review-types": "link:../../../kb-labs-shared/packages/review-types"
   },
   "devDependencies": {
-    "rimraf": "^6.0.1",
-    "tsup": "^8.5.0",
-    "typescript": "^5.6.3",
-    "vitest": "^2.1.4"
+    "@kb-labs/devkit": "link:../../../../kb-labs-devkit",
+    "@types/node": "^24.7.0",
+    "rimraf": "^6",
+    "tsup": "^8",
+    "typescript": "^5",
+    "vitest": "^3"
   }
 }
