--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,75 @@
-# Dependencies
+# ───────────────
+# Node & Package managers
+# ───────────────
 node_modules/
 .pnpm-store/
-.yarn/
-.yarnrc.yml
-
-# sentinel
-.sentinel
-.sentinel/context
-.sentinel/reviews
-.sentinel/exports
-.sentinel/analytics
-
-# Build outputs
-dist/
-out/
-build/
-coverage/
+.pnp.*
+.pnp.js
 *.log
+*.lock
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# TypeScript
+# ───────────────
+# Build artifacts
+# ───────────────
+dist/
+build/
+.cache/
+.temp/
+tmp/
 *.tsbuildinfo
+*.tgz
+**/tsup.config.bundled_*.mjs
 
-# IDE / Editors
-.idea/
-*.swp
-.DS_Store
-
-# Local env
-.env
-.env.local
-.env.*
-!.env.example
-
-# Test snapshots
+# ───────────────
+# Testing
+# ───────────────
+coverage/
+.vitest/
+.vscode-test/
 *.snap
 
-# KB Labs Artifacts
+# ───────────────
+# IDE & OS junk
+# ───────────────
+.idea/
+.vscode/
+*.swp
+*.swo
+*.DS_Store
+Thumbs.db
+
+# ───────────────
+# Environment & configs
+# ───────────────
+.env
+.env.*.local
+.env.local
+*.local
+
+# ───────────────
+# Monorepo / Workspaces
+# ───────────────
+packages/*/lib/
+apps/*/lib/
+apps/*/dist/
+packages/*/dist/
+apps/*/coverage/
+packages/*/coverage/
+
+# ───────────────
+# AI Review specific
+# ───────────────
+.sentinel/
+.sentinel/context/
+.sentinel/reviews/
+.sentinel/exports/
+.sentinel/analytics/
+.ai-review/
+
+# ───────────────
+# KB Labs DevKit
+# ───────────────
 .kb/devkit/tmp/
