--- a/package.json
+++ b/package.json
@@ -1,16 +1,9 @@
 {
   "name": "@kb-labs/ai-review",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
-  "description": "AI-powered code review and analysis tool",
+  "description": "AI-powered code review plugin for the KB Labs ecosystem.",
   "type": "module",
-  "keywords": [
-    "ai",
-    "code-review",
-    "static-analysis",
-    "typescript",
-    "javascript"
-  ],
   "author": {
     "name": "Kirill Baranov",
     "url": "https://github.com/kirill-baranov"
@@ -26,57 +19,39 @@
   "homepage": "https://github.com/kirill-baranov/kb-labs-ai-review#readme",
   "workspaces": [
     "apps/*",
-    "packages/*",
-    "packages/providers/*",
-    "packages/analytics/*"
+    "packages/*"
   ],
   "scripts": {
-    "// ——— devkit": "────────────────────────────────────────",
     "devkit:sync": "node scripts/devkit-sync.mjs",
+    "predevkit:sync": "pnpm devkit:paths",
+    "devkit:paths": "pnpm exec kb-devkit-paths",
     "devkit:sync:ci": "node scripts/devkit-sync.mjs --ci-only",
+    "predevkit:sync:ci": "pnpm devkit:paths",
     "devkit:check": "node scripts/devkit-sync.mjs --check",
+    "predevkit:check": "pnpm devkit:paths",
     "devkit:force": "node scripts/devkit-sync.mjs --force",
+    "predevkit:force": "pnpm devkit:paths",
     "devkit:help": "node scripts/devkit-sync.mjs --help",
     "postinstall": "pnpm -s devkit:sync || true",
     "// ——— core": "────────────────────────────────────────",
-    "clean": "rimraf dist",
-    "build": "pnpm -r run build",
-    "build:clean": "pnpm -r run clean && pnpm -r run build",
-    "dev": "pnpm -r --parallel --filter @kb-labs/ai-review-core --filter @kb-labs/ai-review-analytics --filter @kb-labs/ai-review-provider-* --filter @kb-labs/ai-review-cli run dev",
+    "build": "pnpm -r --filter ./packages/... run build",
+    "build:clean": "pnpm -r --filter ./packages/... run clean && pnpm run build",
+    "dev": "pnpm -r --parallel --filter ./packages/... run dev",
     "// ——— quality": "────────────────────────────────────────",
-    "lint": "pnpm -r run lint",
-    "lint:fix": "pnpm -r run lint:fix",
-    "format": "prettier --write .",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "type-check": "tsc -b tsconfig.tools.json",
+    "lint": "pnpm -r exec eslint .",
+    "lint:fix": "pnpm -r exec eslint . --fix",
+    "test": "pnpm -r --if-present run test",
+    "test:coverage": "pnpm -r --if-present run test --coverage",
+    "test:watch": "pnpm -r --parallel --if-present run test:watch",
+    "type-check": "pnpm -r run type-check",
+    "format": "prettier -w .",
+    "format:check": "prettier -c .",
     "// ——— ci/qa": "────────────────────────────────────────",
-    "check": "pnpm lint && pnpm type-check && pnpm test -- --run",
+    "check": "pnpm lint && pnpm type-check && pnpm test",
     "ci": "pnpm clean && pnpm build && pnpm check",
     "// ——— cleanup": "────────────────────────────────────────",
-    "clean:all": "rimraf node_modules packages/*/node_modules apps/*/node_modules dist .ai-review",
-    "clean:analytics": "rimraf .ai-review/analytics dist/analytics dist/analytics-export",
-    "// ——— context": "────────────────────────────────────────",
-    "ai-review:context:dev": "pnpm -F @kb-labs/ai-review-cli exec tsx src/index.ts build-context",
-    "ai-review:context": "pnpm -r build && pnpm -F @kb-labs/ai-review-cli exec node dist/index.js build-context",
-    "// ——— review": "────────────────────────────────────────",
-    "ai-review:review:dev": "pnpm -F @kb-labs/ai-review-cli exec tsx src/index.ts review --diff fixtures/changes.diff",
-    "ai-review:review:nofail:dev": "pnpm -F @kb-labs/ai-review-cli exec tsx src/index.ts review --diff fixtures/changes.diff --fail-on none",
-    "ai-review:review": "pnpm -r build && pnpm -F @kb-labs/ai-review-cli exec node dist/index.js review --diff fixtures/changes.diff",
-    "// ——— render": "────────────────────────────────────────",
-    "ai-review:render-md:dev": "pnpm -F @kb-labs/ai-review-cli exec tsx src/index.ts render-md --in .ai-review/reviews/review.json --out .ai-review/reviews/review.human.md",
-    "ai-review:render-md": "pnpm -r build && AI_REVIEW_PROFILE=frontend pnpm -F @kb-labs/ai-review-cli exec node dist/index.js render-md",
-    "ai-review:render-html:dev": "pnpm -F @kb-labs/ai-review-cli exec tsx src/index.ts render-html --in .ai-review/reviews/review.json --out .ai-review/reviews/review.html",
-    "ai-review:render-html": "pnpm -r build && AI_REVIEW_PROFILE=frontend pnpm -F @kb-labs/ai-review-cli exec node dist/index.js render-html",
-    "// ——— analytics": "────────────────────────────────────────",
-    "ai-review:analytics:ingest": "pnpm -F @kb-labs/ai-review-cli exec node dist/index.js analytics:ingest",
-    "ai-review:analytics:print": "pnpm -F @kb-labs/ai-review-cli exec node dist/index.js analytics:print",
-    "ai-review:analytics:top": "pnpm -F @kb-labs/ai-review-cli exec node dist/index.js analytics:top",
-    "ai-review:analytics:trend": "pnpm -F @kb-labs/ai-review-cli exec node dist/index.js analytics:trend",
-    "ai-review:analytics:export": "pnpm -F @kb-labs/ai-review-cli exec node dist/index.js analytics:export",
-    "// ——— demos": "────────────────────────────────────────",
-    "demo": "pnpm -F @kb-labs/ai-review-demo dev"
+    "clean": "pnpm -r run clean",
+    "clean:all": "rimraf node_modules packages/*/node_modules apps/*/node_modules dist"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,json,md,yml,yaml}": [
@@ -86,23 +61,16 @@
       "eslint --fix"
     ]
   },
-  "dependencies": {
-    "@kb-labs/devkit": "link:../kb-labs-devkit",
-    "zod": "^4.1.5"
-  },
   "devDependencies": {
-    "@actions/core": "^1",
-    "@actions/github": "^6",
-    "@types/node": "^24.3.3",
-    "@types/picomatch": "^4",
-    "@vitest/coverage-v8": "^3.2.4",
-    "better-sqlite3": "^12.2.0",
-    "colorette": "^2.0.20",
+    "@kb-labs/devkit": "link:../kb-labs-devkit",
+    "@typescript-eslint/eslint-plugin": "^8",
+    "@typescript-eslint/parser": "^8",
+    "@vitest/coverage-v8": "^3",
+    "eslint": "^9",
     "prettier": "^3",
     "rimraf": "^6",
-    "tsup": "^8.5.0",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.10",
+    "tsup": "^8",
+    "typescript": "^5",
     "vitest": "^3.2.4"
   },
   "engines": {
