--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,6 @@
 {
   "files": [],
-  "references": [
-    { "path": "packages/core" },
-    { "path": "packages/cli" },
-    { "path": "packages/analytics" },
-    { "path": "packages/providers/types" },
-    { "path": "packages/providers/mock" },
-    { "path": "packages/providers/local" },
-    // { "path": "packages/providers/openai" },
-    // { "path": "packages/providers/claude" },
-    { "path": "apps/demo" }
-  ],
+  "references": [{ "path": "./packages/" }],
   "extends": "./tsconfig.base.json",
   "compilerOptions": { "composite": true, "noEmit": true }
 }
