--- a/packages/ai-review-contracts/tsconfig.build.json
+++ b/packages/ai-review-contracts/tsconfig.build.json
@@ -1,15 +1,10 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../../kb-labs-devkit/packages/devkit/tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "baseUrl": ".",
-    "paths": {}
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "composite": true
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "dist",
-    "node_modules"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
