--- a/packages/ai-review-contracts/tsconfig.json
+++ b/packages/ai-review-contracts/tsconfig.json
@@ -1,11 +1,7 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
-  "extends": "@kb-labs/devkit/tsconfig/lib.json",
+  "extends": "@kb-labs/devkit/tsconfig/node.json",
+  "include": ["src"],
   "compilerOptions": {
-    "rootDir": ".",
-    "outDir": "dist"
-  },
-  "include": ["src", "tests"],
-  "references": []
+    "noEmit": true
+  }
 }
-
